# StoreGoods

./: .gitignore  README.md  StoreGoods_233_321.docx  package.json  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/backend/apps/soft/: admin.py  models.py  urls.py  utils.py  views.py
backend/backend/apps/soft/migrations/: 0001_initial.py
backend/backend/apps/soft/templates/components/: list_categories.html
backend/backend/apps/soft/templates/soft/: detail.html  main.html
backend/backend/apps/soft/templatetags/: soft_tags.py
backend/backend/templates/: base.html
trip-data/: app.json  package.json
