[tool.poetry]
name = "student-assistant"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "student_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
